src/test/deca/context/invalid/Objet/protect_interclass_select2.deca
// Description:
//    test de la sélection d'un attribut protégé dans une autre classe
//
// Resultats:
//   
//  19:15: The field i is declared protected and you try to get it out from  the class or a subclass

// Historique:
//    cree le 19/01/2022

class A {
    protected int i ;
    
}
class B  {
    A a;
    int get(){
        return a.i ;
    }
}
{}



